roles/gitlab_demo/files/demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata: { name: demo }
spec: { selector: { app: demo }, ports: [{ port: 80, targetPort: 8080 }] }
