roles/gitlab_demo/files/demo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: demo }
spec:
  ingressClassName: traefik
  rules:
    - host: HOST_PLACEHOLDER
      http: { paths: [{ path: /, pathType: Prefix, backend: { service: { name: demo, port: { number: 80 } } } }] }
